# Axent

./: .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  README.md  THIRD_PARTY_LOCK.md
cmake/: AxentDependencies.cmake  CompilerWarnings.cmake
config/: axent.toml
docs/: ROADMAP.md
docs/architecture/: AXENT_ARCHITECTURE.md  AXENT_EXTENSION_MODEL.md  AXENT_HOST_MODEL.md  AXTP_PROFILE_OWNERSHIP.md  LAYER_BOUNDARIES.md
docs/dev/: CODEX_GUARDRAILS.md
docs/superpowers/plans/: 2026-07-02-axent-core.md  2026-07-02-axent-daemon-embedded-media-relay.md  2026-07-03-axent-nearcast-style-foundation.md  2026-07-03-axent-real-adapter-daemon-mode.md
docs/superpowers/specs/: 2026-07-02-axent-core-design.md  2026-07-02-axent-daemon-embedded-media-relay-design.md  2026-07-03-axent-nearcast-style-foundation-design.md  2026-07-03-axent-real-adapter-daemon-mode-design.md
include/axent/: version.hpp
include/axent/adapters/: axdp_adapter.hpp  axtp_adapter.hpp  mock_adapter.hpp  tea_adapter.hpp
include/axent/cli/: axtp_cli.hpp  options.hpp
include/axent/config/: config.hpp
include/axent/control/: axtp_control_endpoint.hpp  control_contract.hpp  control_plane.hpp  protocol_codecs.hpp  websocket_server.hpp
include/axent/core/: adapter.hpp  adapter_registry.hpp  broker.hpp  capability_registry.hpp  device_manager.hpp  flow_control.hpp  json.hpp  middleware.hpp  route_manager.hpp  session_manager.hpp  types.hpp
include/axent/diagnostics/: diagnostics.hpp
include/axent/firmware/: firmware_task.hpp  firmware_update_service.hpp
include/axent/host/: axent_host.hpp
include/axent/logging/: logger.hpp
include/axent/media/: media_frame.hpp  media_relay.hpp  media_stream.hpp  media_subscription.hpp  video_stream_params.hpp
include/axent/testing/: axtp_adapter_test_seam.hpp
include/axent/tooling/: axtp_cli.hpp
include/axent/transport/: types.hpp
packaging/macos/: com.mostorm.axentd.plist
packaging/windows/: axentd-service.xml
src/: version.cpp
src/adapters/: axdp_adapter.cpp  axtp_adapter.cpp  axtp_adapter_internal.hpp  axtp_adapter_test_seam.cpp  axtp_adapter_test_seam.hpp  mock_adapter.cpp  tea_adapter.cpp
src/cli/: axtp_cli.cpp  axtpctl_main.cpp  main.cpp  options.cpp
src/config/: config.cpp
src/control/: axtp_control_endpoint.cpp  control_contract.cpp  control_plane.cpp  protocol_codecs.cpp  websocket_server.cpp
src/core/: adapter_registry.cpp  broker.cpp  capability_registry.cpp  device_manager.cpp  flow_control.cpp  json.cpp  middleware.cpp  route_manager.cpp  session_manager.cpp
src/daemon/: main.cpp
src/diagnostics/: diagnostics.cpp
src/firmware/: axtp_firmware_backend.cpp  axtp_firmware_backend.hpp  firmware_task.cpp  firmware_update_service.cpp  md5.cpp  md5.hpp
src/host/: axent_host.cpp
src/logging/: logger.cpp
src/media/: media_relay.cpp  media_subscription.cpp  video_stream_params.cpp
src/tooling/: axtp_cli.cpp  md5.cpp  md5.hpp
src/transports/hidapi/: hid_transport.cpp  hid_transport.hpp
src/transports/tcp/: native_tcp_transport.hpp
src/transports/websocket/: ix_websocket_transport.hpp
tests/: adapter_skeleton_test.cpp  axent_host_test.cpp  axtp_cli_runner_test.cpp  axtp_control_endpoint_test.cpp  axtp_firmware_backend_test.cpp  axtp_real_adapter_test.cpp  broker_flow_test.cpp  cli_options_test.cpp  cli_smoke_test.cpp  control_contract_test.cpp  core_types_test.cpp  diagnostics_config_test.cpp  firmware_update_service_test.cpp  hid_transport_test.cpp  logging_foundation_test.cpp  maintenance_lease_test.cpp  manager_registry_test.cpp  media_relay_test.cpp  mock_adapter_test.cpp  protocol_codecs_test.cpp  tcp_transport_test.cpp  test_json.hpp  transport_media_types_test.cpp  version_smoke_test.cpp  websocket_server_test.cpp  websocket_transport_test.cpp
tests/cmake/: verify_axent_dependency_boundary.cmake
